fixing white border on mobile

--- a/styles/AboutMe.css
+++ b/styles/AboutMe.css
@@ -132,7 +132,7 @@
   border-radius: 50%;
 }
 .about-me-options .highlighted-btn {
-  margin: 0 0 0 30px;
+  margin: 0 0 0 0;
 }
 @media only screen and (max-width: 1110px) {
   .about-me-parent {
