--- a/styles/ContactMe.css
+++ b/styles/ContactMe.css
@@ -90,7 +90,7 @@ form button {
   opacity: 0.5;
 }
 .central-form form {
-  width: auto;
+  width: 100%;
   box-shadow: 0 0 2px 1px #fff;
   display: flex;
   color: #111;
@@ -136,7 +136,6 @@ form button {
   margin-top: 15px;
   padding: 5px;
   outline: none;
-  width: 900px;
   color: #e6e3e3;
   border: 2px solid #ff5823;
   font-size: 12px;
