--- a/styles/Profile.css
+++ b/styles/Profile.css
@@ -88,7 +88,7 @@
   border-radius: 50%;
   height: 380px;
   width: 380px;
-  margin: 0 0 0 100px;
+  margin: 0 0 100px;
 }
 .profile-picture-background {
   height: 92%;
