--- a/styles/Resume.css
+++ b/styles/Resume.css
@@ -54,13 +54,13 @@
 .resume-card {
   display: flex;
   height: 360px;
-  width: 1000px;
+  width: 100%;
   margin-bottom: 80px;
 }
 .resume-bullets {
   box-shadow: 15px 0 9px -15px #1f2235;
   height: 100%;
-  width: 320px;
+  width: 320px; 
 }
 .resume-bullet-details {
   flex-grow: 1;
@@ -242,6 +242,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
   }
   .bullets {
     width: 90%;
@@ -262,7 +263,7 @@
   .resume-bullet-details {
     height: 360px;
     padding: 0;
-    width: 400px;
+    width: 100%;
   }
   .resume-bullets {
     margin: 30px 0;
